# FastCull

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  eslint.config.js  index.html  package-lock.json  package.json
.github/workflows/: check-quality.yml  ci.yml  release.yml
.github/workflows/ISSUE_TEMPLATE/: bug_report.md
docs/: ARCHITECTURE.md
frontend/: package-lock.json  package.json
frontend/src/app/: App.tsx
frontend/src/entities/: generated
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/bindings/: PhotoMetadata.ts
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: cache.rs  commands.rs  export.rs  lib.rs  main.rs  state.rs
src-tauri/src/extractor/: mod.rs  raf.rs  tiff.rs
src-tauri/src/models/: photo.rs
src-tauri/src/traits/: mod.rs
src/components/: Dropzone.tsx  ExportDialog.tsx  FileBrowser.tsx  Filmstrip.tsx  FilterBar.tsx  GridView.tsx  StatusBar.tsx  Viewer.tsx
src/hooks/: useCull.ts  useKeyboard.ts
src/styles/: app.css  dropzone.css  exportdialog.css  filebrowser.css  filmstrip.css  filterbar.css  globals.css  gridview.css  statusbar.css  viewer.css
